apps/obsidian-livesync/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: obsidian-livesync
  namespace: obsidian-livesync
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
  labels:
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/part-of: obsidian-livesync
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - obsidian.lan
        - obsidian.pj-home-lab.com
  rules:
    - host: obsidian.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: couchdb
                port:
                  number: 5984
    - host: obsidian.pj-home-lab.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: couchdb
                port:
                  number: 5984
